--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, et al &quot; Event-based Time-varying UAV Formation Obstacle Avoidance Control under Cyber-attacks</a>,&quot; 2023.   </a>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, et al, &quot; Event-based Time-varying UAV Formation Obstacle Avoidance Control under Cyber-attacks</a>,&quot; 2023.   </a>
 	</li>
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>,  Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
@@ -117,36 +117,36 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
                           <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao, and Dengxiu Yu, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, DOI: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>SCI, Q1</strong>)  </a>
 	</li>
 	<li>
-                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2022, DOI: 10.1109/JSYST.2022.3212068 (<strong>SCI, Q2</strong>) </a>
+                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Zihao Wu, &quot; <a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9928314" target="_blank">Large-scale Fixed-wing UAV Swarm System Control with Collision Avoidance and Formation Maneuver</a>,&quot; <i>IEEE Systems Journal</i>, 2022, DOI: 10.1109/JSYST.2022.3212068 (<strong>SCI, Q2</strong>) </a>
 	</li>
 	<li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned Aerial Vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, DOI: https://doi.org/10.1177/01423312221100340 (<strong>SCI, Q4</strong>)</a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu,  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned Aerial Vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, DOI: https://doi.org/10.1177/01423312221100340 (<strong>SCI, Q4</strong>)</a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022, DOI: 10.1109/JAS.2022.000000.(<strong>Top, SCI, Q1</strong>) (First author is tutor)</a>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song, &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022, DOI: 10.1109/JAS.2022.000000.(<strong>Top, SCI, Q1</strong>) (First author is tutor)</a>
 	</li>
 	 <li>
-                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot;;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/abstract/document/10247627" target="_blank">An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, DOI: 10.1109/TAI.2023.3314581.(First author is tutor)</a> 
+                          Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/abstract/document/10247627" target="_blank">An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, DOI: 10.1109/TAI.2023.3314581.(First author is tutor)</a> 
         </li>
 </ol>
 
 <h3>Conference Papers</h3>
 <ol>
                <li>
-                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor Steering Teleoperation Control with Fuzzy PID Algorithm based on Delay Time Measurement with Timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020, DOI: 10.1109/CAC51589.2020.9326587.  (EI)</a>
+                         <strong>Jiacheng Li</strong>, Wei Lu, Yankai Li, Mengjie Zeng, Ling Wang, Yongnian Zhang, &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/document/9326587/authors#authors" target="_blank">Tractor Steering Teleoperation Control with Fuzzy PID Algorithm based on Delay Time Measurement with Timestamp</a>,&quot; <i>Chinese Automation Congress (CAC)</i>, 2020, DOI: 10.1109/CAC51589.2020.9326587.  (EI)</a>
 	</li>
                   <li>
-                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al &quot; <a class="dhtgD aw5Odc" href="https://link.springer.com/chapter/10.1007/978-981-19-6613-2_434" target="_blank">Affine Formation Obstacle Avoidance Control of Unmanned Aerial Vehicles with Prescribed Convergence Time </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022, DOI: https://doi.org/10.1007/978-981-19-6613-2_434. (EI)</a>
+                         <strong>Jiacheng Li</strong>, Yangwang Fang, et al, &quot; <a class="dhtgD aw5Odc" href="https://link.springer.com/chapter/10.1007/978-981-19-6613-2_434" target="_blank">Affine Formation Obstacle Avoidance Control of Unmanned Aerial Vehicles with Prescribed Convergence Time </a>,&quot; <i>2022 International Conference on Guidance,Navigation and Control (ICGGNC)</i>, 2022, DOI: https://doi.org/10.1007/978-981-19-6613-2_434. (EI)</a>
 	</li>    
 </ol>
 
 <h3>Cooperative Papers</h3>
 <ol>
                <li>
-                         Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022, DOI: 10.1088/1361-6501/ac8dae. (<strong>SCI, Q3</strong>)</a>
+                         Mengjie Zeng, Shunming Li, Ranran Li, <strong>Jiacheng Li</strong>, Kun Xu, Xianglian Li, &quot;<a class="dhtgD aw5Odc" href="https://iopscience.iop.org/article/10.1088/1361-6501/ac8dae" target="_blank">A Transfer Learning Fault Diagnosis Method Considering Nearest Neighbor Feature Constraints</a>,&quot; <i>Measurement Science and Technology</i>, 2022, DOI: 10.1088/1361-6501/ac8dae. (<strong>SCI, Q3</strong>)</a>
 	</li>     
 	       <li>
-                         黄号, 马文卉, <strong>李家诚</strong>, 方洋旺,  &quot; 未知环境下无人机编队智能避障控制方法 </a>,&quot; <i>清华大学学报（自然科学版）</i>, 2023, DOI: 10.16511/j.cnki.qhdxxb.2023.27.001. (EI)    </a>
+                         黄号, 马文卉, <strong>李家诚</strong>, 方洋旺,  &quot;<a class="dhtgD aw5Odc" href="https://kns.cnki.net/kcms2/article/abstract?v=fmMZJtqnKJZ39V86FyBnx5NpDg7slLsOE6ljhvL2DXoqu96EZ1IDT4YOGpCHx2BP-4GcmjfW3bSNZs7eNKF3Ej2MR-vhY62beaCwloIDuVTez-w8I7gDpyEl19XL92ledisjCGwXxWE=&uniplatform=NZKPT&language=CHS" target="_blank">未知环境下无人机编队智能避障控制方法 </a>,&quot; <i>清华大学学报（自然科学版）</i>, 2023, DOI: 10.16511/j.cnki.qhdxxb.2023.27.001. (EI)    </a>
          </li>  
 </ol></h3>
 
