--- a/index.html
+++ b/index.html
@@ -258,8 +258,8 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng Li | Last updated: 11/2023</center>
-    <!--<center>© Jiacheng Li
+	<center>© Jiacheng LI | Last updated: 11/2023</center>
+    <!--<center>© Jiacheng LI
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
     </center>-->
