--- a/index.html
+++ b/index.html
@@ -148,8 +148,11 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	      <li>
                          Zhikai Wang, Zhumu Fu, Zihao Wu, Chenqi Zhu, <strong>Jiacheng Li</strong>, &quot;<a class="dhtgD aw5Odc" href="https://link.springer.com/article/10.1007/s42405-023-00676-3" target="_blank">Three-Dimensional Cooperative Guidance Law Against Maneuvering Target with Time-Varying Communication Delays</a>,&quot; <i>International Journal of Aeronautical and Space Sciences</i>, 2023, DOI: 10.1007/s42405-023-00676-3. (<strong>SCI, Q4</strong>)</a>
 	</li>
-	       <li>
+       <li>
                          黄号, 马文卉, <strong>李家诚</strong>, 方洋旺,  &quot;<a class="dhtgD aw5Odc" href="https://kns.cnki.net/kcms2/article/abstract?v=fmMZJtqnKJZ39V86FyBnx5NpDg7slLsOE6ljhvL2DXoqu96EZ1IDT4YOGpCHx2BP-4GcmjfW3bSNZs7eNKF3Ej2MR-vhY62beaCwloIDuVTez-w8I7gDpyEl19XL92ledisjCGwXxWE=&uniplatform=NZKPT&language=CHS" target="_blank">未知环境下无人机编队智能避障控制方法 </a>,&quot; <i>清华大学学报（自然科学版）</i>, 2023, DOI: 10.16511/j.cnki.qhdxxb.2023.27.001. (EI)    </a>
+         </li>  
+	  <li>
+                         曾梦洁, 李舜酩, 李冉冉, <strong>李家诚</strong>, 徐坤,  &quot;<a class="dhtgD aw5Odc" href="https://kns.cnki.net/kcms2/article/abstract?v=QGW0A_jem_m5tiw3moE9Oa57KrkXAoLaTupyMRCwTuIpadKPM-oF6Kuu3yPBIdzNPUzXkvP4q6l9sq8uVvgrdxl8CPd16oe8-OV16GDnEr_qSUI-ZRbwX_xwH44ogsh6U5X2WspLPxQ=&uniplatform=NZKPT&language=CHS" target="_blank">滚动轴承的堆叠稀疏判别自编码智能故障诊断方法 </a>,&quot; <i>轴承</i>, 2022.    </a>
          </li>  
 </ol></h3>
 
