--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Research Interests</h2>
 <ul>
 	<li>
-		Swarm Control
+		Networked System Control
 		<ul>
-			<li>Swarm Control, Swarm Security Control,  Cyber Physical System (CPS), Multi-Agent System.</li>
+			<li>Swarm Control, Swarm Security Control,  Cyber-Physical System (CPS), Multi-Agent System.</li>
 		</ul>	
 	</li>
 	<li>
@@ -95,6 +95,12 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Publications</h2>
 <h3>Submitted for publication </h3>
 <ol>
+	 <li>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu,  et al,  &quot; Self-healing Control for Networked System Against Compound Cyber-attacks: A Twin-based Approach </a>,&quot; 2023.    </a>
+        </li>
+	 <li>
+                          <strong>Jiacheng Li</strong>, Jason J. R. Liu,  et al,  &quot; Twin-based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2023.    </a>
+        </li>
         <li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
         </li>
@@ -259,12 +265,17 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 		Secure Collaborative Control in Heterogeneous Swarms with Cooperative-Competitive Interactions 
 	</li>
 	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="270"><br></td>
+	<li>
+		Twin-based Networked Systems Control Under Complex Cyber-attacks 
+	</li>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="100"><br></td>
+	 <td><img src="./JC_L_files/twin_NS.png" border="0" height="100"><br></td>
 </ul>
 
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng LI | Last updated: 11/2023</center>
+	<center>© Jiacheng LI | Last updated: 12/2023</center>
     <!--<center>© Jiacheng LI
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
