--- a/index.html
+++ b/index.html
@@ -268,8 +268,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-based Networked Systems Control Under Complex Cyber-attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="100"><br></td>
-	 <td><img src="./JC_L_files/twin_NS.png" border="0" height="100"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="100"><img src="./JC_L_files/twin_NS.png" border="0" height="100"><br></td>
 </ul>
 
 <div id="footer">
