--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h3>Submitted for publication </h3>
 <ol>
 	 <li>
-                          <strong>Jiacheng Li</strong>, Jason J. R. Liu,  et al,  &quot; Self-healing Control for Networked System Against Compound Cyber-attacks: A Twin-based Approach </a>,&quot; 2023.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-healing Control for Networked System Against Compound Cyber-attacks: A Twin-based Approach </a>,&quot; 2023.    </a>
         </li>
 	 <li>
-                          <strong>Jiacheng Li</strong>, Jason J. R. Liu,  et al,  &quot; Twin-based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2023.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2023.    </a>
         </li>
         <li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
@@ -268,7 +268,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-based Networked Systems Control Under Complex Cyber-attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="100"><img src="./JC_L_files/twin_NS.png" border="0" height="100"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="250"><img src="./JC_L_files/twin_NS.png" border="0" height="250"><br></td>
 </ul>
 
 <div id="footer">
