--- a/index.html
+++ b/index.html
@@ -250,15 +250,15 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	</li>
 	<td><img src="./JC_L_files/robot.png" border="0" height="280"><br></td>
                  <li>
-		Leader-follower Formation control
+		Leader-Follower Formation control
 	</li>
 	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="340"><br></td>
 	 <li>
-		Cooperative Control of Swarm System under Dos attack via Cloud-Fog Computing
+		Cooperative Control of Swarm System under DoS attack via Cloud-Fog Computing
 	</li>
 	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="280"><br></td>
 	<li>
-		Event-based Time-varying UAV formation
+		Event-Based Time-varying UAV formation
 	</li>
 	<td><img src="./JC_L_files/ET obstacle.png" border="0" height="270"><br></td>
 	<li>
@@ -266,9 +266,9 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	</li>
 	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="270"><br></td>
 	<li>
-		Twin-based Networked Systems Control Under Complex Cyber-attacks 
+		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="300"><img src="./JC_L_files/twin_NS.png" border="0" height="200"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
 <div id="footer">
