--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, et al, &quot; Event-based Time-varying UAV Formation Obstacle Avoidance Control under Cyber-attacks</a>,&quot; 2023.   </a>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-varying UAV Formation Obstacle Avoidance Control under Cyber-attacks</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>,  Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
+	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
 	<li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
