--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><td colspan="2"></td><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
 <div id="footer">
