--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	</li>
 	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="340"><br></td>
 	 <li>
-		Cooperative Control of Swarm System under DoS attack via Cloud-Fog Computing
+		Cooperative Control of Swarm System under DoS Attack via Cloud-Fog Computing
 	</li>
 	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="280"><br></td>
 	<li>
@@ -268,7 +268,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><td colspan="2"></td><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><td colspan="4"></td><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
 <div id="footer">
