--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h3>Submitted for publication </h3>
 <ol>
 	 <li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-healing Control for Networked System Against Compound Cyber-attacks: A Twin-based Approach </a>,&quot; 2023.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-attacks: A Twin-Based Approach </a>,&quot; 2023.    </a>
         </li>
 	 <li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2023.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-Based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2023.    </a>
         </li>
         <li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under Dos attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
         </li>
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-varying UAV Formation Obstacle Avoidance Control under Cyber-attacks</a>,&quot; 2023.   </a>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; 2023.   </a>
 	</li>
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
@@ -268,7 +268,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><td colspan="4"></td><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><tr><td colspan="3"></td></tr><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
 <div id="footer">
