--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h3>Submitted for publication </h3>
 <ol>
 	 <li>
-                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-attacks: A Twin-Based Approach </a>,&quot; 2023.    </a>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2023.    </a>
         </li>
 	 <li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-Based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2023.    </a>
@@ -268,7 +268,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><tr><td colspan="3"></td></tr><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><tr><td colspan="30"></td></tr><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
 <div id="footer">
