--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <ul>
 	
 	<li>
-		M.E. Dept. of Unmanned system Research, Northwestern Polytechnical University, Sep. 2020 to Jun. 2023.
+		M.E. Dept. of Unmanned System Research, Northwestern Polytechnical University, Sep. 2020 to Jun. 2023.
 	<li>
 		B.E. Dept. of Artificial Intelligence, Nanjing Agricultural University, Sep. 2016 to Jun. 2020.
 	</li>
@@ -78,6 +78,9 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 
 <h2>News</h2>
 <ul>
+	<li>
+	 Jan. 2024 I am invited to be a reviewer for Automatika: Journal for Control, Measurement, Electronics, Computing and Communications.
+	</li>
 	<li>
 	 Oct. 2023 I am invited to be a reviewer for International Journal of Aerospace Engineering and Franklin Open.
 	</li>
@@ -207,12 +210,26 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 		Former Laboratory link <a href="https://www.njaurobot.cn">(Intelligent Robot Laboratory)</a>  (<a href="https://www.njaurobot.cn/student2/lijiacheng.html">https://www.njaurobot.cn/student2/lijiacheng.html</a>).
 	</li>
 </ol>
-
-<h2>Manuscript Review works</h2>
+	    
+<h2>Review Services</h2>
 <ol>
 	<li>
-                     Reviewer of International Journal of Aerospace Engineering, Franklin Open, and Chinese Automation Congress (CAC2021, CAC2022, CAC2023).
-               </li>
+                   Journal Reviewer for  
+		       <li> International Journal of Aerospace Engineering</li>
+	       </ul>	
+	       <ul>
+		       <li> Automatika: Journal for Control, Measurement, Electronics, Computing and Communications</li>
+	       </ul>	
+	       <ul>
+		       <li> Franklin Open</li>
+	       </ul>	
+	</li>
+	<li>
+                   Conference Reviewer for
+		<ul>
+		       <li> Chinese Automation Congress (CAC2021, CAC2022, CAC2023)</li>
+	       </ul>	
+	</li>
 </ol>
 
 <h2>Work Presentations</h2>
