--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 
 <h2>Experience</h2>
 <ul>
-	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. (Supervisor: Dr. Jason J. R. Liu.)</li>
+	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. <!--(Supervisor: Dr. Jason J. R. Liu.)--></li>
         <li>  Intern, Xi'an Daheng Tiancheng Information Technology Co., Ltd, Dec. 2021 to Feb. 2022.</li>
 </ul>
 	    
@@ -91,31 +91,36 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	 Sep. 2023 Our overview of swarm coordinated control is accepted by IEEE Transactions on Artificial Intelligence.
 	</li>
 	 <li>
-	 Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to do more valuable and innovative research in the future.
+	<!-- Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to do more valuable and innovative research in the future.-->
 	</li>
 </ul>
 
 <h2>Publications</h2>
 <h3>Submitted for publication </h3>
 <ol>
-	 <li>
+	<!-- 
+	<li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
         </li>
 	 <li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-Based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2024.    </a>
-        </li>
+        </li> 
+	-->
         <li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
         </li>
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
+
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; 2023.   </a>
 	</li>
+		<!-- 
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
+		-->
 	<li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
