--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 	 Sep. 2023 Our overview of swarm coordinated control is accepted by IEEE Transactions on Artificial Intelligence.
 	</li>
+	<!--
 	 <li>
-	<!-- Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to do more valuable and innovative research in the future.-->
+	 Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to do more valuable and innovative research in the future.
 	</li>
+	-->
 </ul>
 
 <h2>Publications</h2>
