--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Biography</h2>
 <p>
 	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
- I obtained my M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a>, <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a> in 2023, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. I am currently working as a research assistant in University of Macau, Department of Electromechanical Engineering. <!--, under the supervision of <a href="https://www.fst.um.edu.mo/people/jasonliu/">Dr. Jason J. R. Liu.</a>--> </div>
+ I obtained my M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a>, <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a> in 2023, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. From August 2024, I will be studying for a PhD at the University of Macau, Department of Electromechanical Engineering, under the supervision of <a href="https://www.fst.um.edu.mo/people/jasonliu/">Dr. Jason J. R. Liu.</a> </div>
 <p></p>
 
 <h2>Education</h2>
@@ -57,7 +57,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 
 <h2>Experience</h2>
 <ul>
-	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. <!--(Supervisor: Dr. Jason J. R. Liu.)--></li>
+	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. (Supervisor: Dr. Jason J. R. Liu.)</li>
         <li>  Intern, Xi'an Daheng Tiancheng Information Technology Co., Ltd, Dec. 2021 to Feb. 2022.</li>
 </ul>
 	    
@@ -90,24 +90,20 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 	 Sep. 2023 Our overview of swarm coordinated control is accepted by IEEE Transactions on Artificial Intelligence.
 	</li>
-	<!--
 	 <li>
 	 Aug. 2023 I am honored to join Dr. Jason J. R. Liu's team and look forward to do more valuable and innovative research in the future.
 	</li>
-	-->
 </ul>
 
 <h2>Publications</h2>
 <h3>Submitted for publication </h3>
 <ol>
-	<!-- 
 	<li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
         </li>
 	 <li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Twin-Based Security Control for UAV Swarm with Complex False Data Injection Attacks </a>,&quot; 2024.    </a>
         </li> 
-	-->
         <li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
         </li>
@@ -118,11 +114,9 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; 2023.   </a>
 	</li>
-		<!-- 
 	<li>
 	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
 	</li>
-		-->
 	<li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
@@ -273,6 +267,18 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
+<h2>Award and Honor</h2>
+<ul>
+	<li>
+	Excellent Master's Thesis in Northwestern Polytechnical University (Only top 5%).	
+	</li>
+	<li>
+	Outstanding Graduate of Nanjing Agricultural University (Only top 10%).
+	</li>
+	<li>
+	Over 10 awards in robotics competitions at the provincial level and above.	
+	</li>
+</ul>
 
 <h2>Relevant Materials</h2>
 <ol>
