--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
  From August 2024, I will be studying for a PhD at the <a href="https://www.um.edu.mo/">University of Macau</a>, <a href="https://www.fst.um.edu.mo/eme/">Department of Electromechanical Engineering</a>, under the supervision of <a href="https://www.fst.um.edu.mo/people/jasonliu/">Dr. Jason J. R. Liu.</a> </div>
 <p></p>
 <p>
-	<div  I am interested in networked system control theories and their applications in intelligent unmanned systems. I welcome colleagues and seniors who share my research interests to join me in studying, discussing, and collaborating in the future.</div>
+	 I am interested in networked system control theories and their applications in intelligent unmanned systems. I welcome colleagues and seniors who share my research interests to join me in studying, discussing, and collaborating in the future. 
 </p>
 		
 <h2>Education</h2>
