--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 		
 <h2>Education</h2>
 <ul>
-	
+        <li>  Ph.D. Dept. of Electromechanical Engineering, University of Macau, Aug. 2024 to --.</li>
 	<li>  M.E. Dept. of Unmanned System Research, Northwestern Polytechnical University, Sep. 2020 to Jun. 2023.</li>
 	<li>  B.E. Dept. of Artificial Intelligence, Nanjing Agricultural University, Sep. 2016 to Jun. 2020.</li>
 </ul>
