--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
  From August 2024, I will be studying for a Ph.D. at the <a href="https://www.um.edu.mo/">University of Macau</a>, <a href="https://www.fst.um.edu.mo/eme/">Department of Electromechanical Engineering</a>, under the supervision of <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Dr. Jason J. R. Liu.</a> </div>
 <p></p>
 <p>
-	 I am interested in networked system control theories and their applications in intelligent unmanned systems. I welcome colleagues and seniors who share my research interests to join me in studying, discussing, and collaborating in the future. 
+	 I am interested in networked system control theories and their applications in intelligent unmanned systems. I welcome colleagues and seniors to communicate and cooperate with me, exploring exciting research together.
 </p>
 		
 <h2>Education</h2>
@@ -61,7 +61,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 
 <h2>Experience</h2>
 <ul>
-	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. (Supervisor: Dr. Jason J. R. Liu.)</li>
+	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. (Supervisor: <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Dr. Jason J. R. Liu.</a>)</li>
         <li>  Intern, Xi'an Daheng Tiancheng Information Technology Co., Ltd, Dec. 2021 to Feb. 2022.</li>
 </ul>
 	    
