--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	    
 	    
 <h2>Work Presentations</h2>
-<strong> Works on Network systems control</strong>
+&ensp; <strong> Works on Network systems control</strong>
 <ul> 
 	<li>
 		Collision Avoidance Control of Cooperative UAVs based on Light Transmission Model
