--- a/index.html
+++ b/index.html
@@ -296,9 +296,11 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Teleoperation of Mobile Robot
 	</li>
+	<td><img src="./JC_L_files/tele1.jpg" border="0" height="120"><br></td>
 	<li>
 		Intelligent Tracking/Irrigation/Football Robot
 	</li>
+	<td><img src="./JC_L_files/robot1.jpg" border="0" height="100"><br><img src="./JC_L_files/robot2.jpg" border="0" height="100"><br><img src="./JC_L_files/robot3.jpg" border="0" height="100"><br></td>
 	<li>
 		Unmanned Driving Robot of Tractor
 	</li>
