--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
 </ul>
 
-	    
+<br>	    
 &ensp; <strong> Works on Robot Control</strong>
 <ul> 
 	<li>
@@ -298,11 +298,11 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Teleoperation of Mobile Robot
 	</li>
-	<td><img src="./JC_L_files/tele1.jpg" border="0" height="120"><br></td>
+	<td><img src="./JC_L_files/tele1.jpg" border="0" height="240"><br></td>
 	<li>
 		Intelligent Tracking/Irrigation/Football Robot
 	</li>
-	<td><img src="./JC_L_files/robot1.jpg" border="0" height="100"><br><img src="./JC_L_files/robot2.jpg" border="0" height="100"><br><img src="./JC_L_files/robot3.jpg" border="0" height="100"><br></td>
+	<td><img src="./JC_L_files/robot1.jpg" border="0" height="180"><img src="./JC_L_files/robot2.jpg" border="0" height="180"><img src="./JC_L_files/robot3.jpg" border="0" height="180"><br></td>
 	<li>
 		Unmanned Driving Robot of Tractor
 	</li>
