--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 &ensp; <strong> Works on Robot Control</strong>
 <ul> 
 	<li>
-		Teleoperation of Tractor Driving Robot
+		Teleoperation of Tractor Driving Robot and Moblie Robot 
 	</li>
                  <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
 		<source src="./JC_L_files/Tractor.mp4" type="video/mp4">
@@ -295,9 +295,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
        		<source src="./JC_L_files/Tractor.mp4" type="video/webm">
 		Your browser does not support the video tag.
 	</video>
-	<li>
-		Teleoperation of Mobile Robot
-	</li>
+&ensp; 
 	<td><img src="./JC_L_files/tele1.jpg" border="0" height="210"><br></td>
 	<li>
 		Intelligent Tracking/Irrigation/Football Robot
