--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
         <li>
 		Leader-Follower Formation control
 	</li>
-	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="340"><br></td>
+	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="350"><br></td>
 	 <li>
 		Cooperative Control of Swarm System under DoS Attack via Cloud-Fog Computing
 	</li>
@@ -280,7 +280,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270"><img src="./JC_L_files/twin_NS.png" border="0" height="220"><br></td>
+	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270">&ensp; <img src="./JC_L_files/twin_NS.png" border="0" height="210"><br></td>
 </ul>
 
 <br>	    
@@ -289,7 +289,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Teleoperation of Tractor Driving Robot and Moblie Robot 
 	</li>
-                 <video muted controls="controls" autoplay="autoplay" loop="loop" width="320" height="240">
+                 <video muted controls="controls" autoplay="autoplay" loop="loop" width="360" height="280">
 		<source src="./JC_L_files/Tractor.mp4" type="video/mp4">
 		<source src="./JC_L_files/Tractor.mp4" type="video/ogg">
        		<source src="./JC_L_files/Tractor.mp4" type="video/webm">
