--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 &ensp; 
 	<td><img src="./JC_L_files/tele1.jpg" border="0" height="225"><br></td>
 	<li>
-		Intelligent Tracking/Irrigation/Football Robot
+		Small Intelligent Tracking/Irrigation/Football Robot
 	</li>
 	<td><img src="./JC_L_files/robot1.jpg" border="0" height="180"><img src="./JC_L_files/robot2.jpg" border="0" height="180"><img src="./JC_L_files/robot3.jpg" border="0" height="180"><br></td>
 	<li>
