--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
-	<td><img src="./JC_L_files/twin_Control.png" border="0" height="270">&ensp; <img src="./JC_L_files/twin_NS.png" border="0" height="210"><br></td>
+	<td><img src="./JC_L_files/Control.png" border="0" height="270">&ensp; <img src="./JC_L_files/twin_NS.png" border="0" height="210"><br></td>
 </ul>
 
 <br>	    
