--- a/index.html
+++ b/index.html
@@ -281,6 +281,10 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
 	<td><img src="./JC_L_files/Control.png" border="0" height="270">&ensp; <img src="./JC_L_files/twin_NS.png" border="0" height="210"><br></td>
+	<li>
+		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
+	</li> Broad-Learning-Based Adaptive Secure Control of UAV Swarms
+	<td><img src="./JC_L_files/broad_Figure.png" border="0" height="280"><br></td>
 </ul>
 
 <br>	    
