--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Experience</h2>
 <ul>
 	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. (Supervisor: <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Dr. Jason J. R. Liu.</a>)</li>
-        <li>  Intern, Xi'an Daheng Tiancheng Information Technology Co., Ltd, Dec. 2021 to Feb. 2022.</li>
 </ul>
 	    
 
@@ -198,7 +197,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
                       2021.12-2022,12, Research on the UAV Autonomous Capability Assessment System, <i>Air Force Engineering University</i>, Main participant.
                 </li>
 		<li>
-                       2023.01-2023.07, Coordinated Control of Unmanned Underwater Vehicles (UUV) Swarm , <i>The 705th Research Institute of China Shipbuilding Industry Corporation</i>, Student in charge.
+                       2023.01-2023.07, Coordinated Control of Unmanned Underwater Vehicles (UUV) Swarm, <i>The 705th Research Institute of China Shipbuilding Industry Corporation</i>, Student in charge.
 	        </li>
 </ol>
 
@@ -221,6 +220,12 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 	</li>
 </ol>
 
+<h2>Assistant Supervisory Experience</h2>
+<ul>
+	 <li>  
+   Final Year Projects： <i>UAV Formation Obstacle Avoidance Control for Practical Mission Requirements</i>i> &#9658 Jianzhang Sun, Cheng Fai Chao, UG students at University of Macau, 2024.
+	 </li>
+</ul>
 
 	    
 <h2>Award and Honor</h2>
@@ -248,10 +253,20 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Work Presentations</h2>
 &ensp; <strong> Works on Network Systems Control</strong>
 <ul> 
+	<!--
 	<li>
 		Collision Avoidance Control of Cooperative UAVs based on Light Transmission Model
 	</li>
-	<td><img src="./JC_L_files/avoid.png" border="0" height="145"><br></td>
+	<td><img src="./JC_L_files/avoid.png" border="0" height="145"><br></td> 
+	-->
+	 <li>
+		Cooperative Control of Swarm System under DoS Attack via Cloud-Fog Computing
+	</li>
+	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="280"><br></td>
+	<li>
+		Secure Collaborative Control in Heterogeneous Swarms with Cooperative-Competitive Interactions 
+	</li>
+	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="270"><br></td>
 	<li>
 		UAV Affine Formation Control
 	</li>
@@ -265,18 +280,11 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 		Leader-Follower Formation control
 	</li>
 	<td><img src="./JC_L_files/Leaderfollower.jpg" border="0" height="350"><br></td>
-	 <li>
-		Cooperative Control of Swarm System under DoS Attack via Cloud-Fog Computing
-	</li>
-	<td><img src="./JC_L_files/CloudFogComputing.jpg" border="0" height="280"><br></td>
 	<li>
 		Event-Based Time-varying UAV formation
 	</li>
 	<td><img src="./JC_L_files/ET obstacle.png" border="0" height="270"><br></td>
-	<li>
-		Secure Collaborative Control in Heterogeneous Swarms with Cooperative-Competitive Interactions 
-	</li>
-	<td><img src="./JC_L_files/Cooperative-competitive Interactions.png" border="0" height="270"><br></td>
+	
 	<li>
 		Twin-Based Networked Systems Control Under Complex Cyber-Attacks 
 	</li>
@@ -314,7 +322,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng LI | Last updated: 02/2024</center>
+	<center>© Jiacheng LI | Last updated: 03/2024</center>
     <!--<center>© Jiacheng LI
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
