--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
 <h2>Assistant Supervisory Experience</h2>
 <ul>
 	 <li>  
-   Final Year Projects： <i>UAV Formation Obstacle Avoidance Control for Practical Mission Requirements</i> &ndash Jianzhang Sun, Cheng Fai Chao, UG students at University of Macau, 2024.
+   Final Year Projects： Jianzhang Sun, Cheng Fai Chao, UG students at the University of Macau, 2024. (<i>UAV Formation Obstacle Avoidance Control for Practical Mission Requirements</i>) 
 	 </li>
 </ul>
 
