--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                         <!--<h1>Jiacheng LI &nbsp; <img src="pics/name_chs.png" height="40px" style="margin-bottom:-10px"></h1>-->
                         <h1>Jiacheng LI (<strong>李家诚</strong>)</h1>
 				</div>
-				<h3> University of Macau</h3>
+			    	 <h3> B.Eng (NAU), M.Eng (NWPU), Ph.D. student (UM)</h3>
+				<h3> Faculty of Science and Technology, University of Macau</h3>
                               
 				<p>
 					Email: &nbsp;&nbsp;<a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and <a href="mailto:
