--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 				<h3> Faculty of Science and Technology, University of Macau</h3>
                               
 				<p>
-					Email: &nbsp;&nbsp;<a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a> and <a href="mailto:
-JiachengLi_Control@outlook.com">JiachengLi_Control@outlook.com</a>.
+					Email: &nbsp;&nbsp; <a href="mailto:jiachengli@um.edu.mo">jiachengli@um.edu.mo</a> and <a href="mailto:jiacheng_li@mail.nwpu.edu.cn">jiacheng_li@mail.nwpu.edu.cn</a>.
 				</p>
                  <!--      <p>&nbsp; </p>-->
 				<p>
