--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 <h3>Submitted for publication </h3>
 <ol>
 	<li>
+                          <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Broad-Learning-Based Adaptive Secure Control for UAV  Swarms under Deception Attacks </a>,&quot; 2024.    </a>
+        </li>
+	<li>
                           <strong>Jiacheng Li</strong>, and Jason J. R. Liu,  et al,  &quot; Self-Healing Control for Networked System Against Compound Cyber-Attacks: A Twin-Based Approach </a>,&quot; 2024.    </a>
         </li>
 	 <li>
