--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 <h2>News</h2>
 <ul>
 	<li>
+	 Apr. 2024 Our patent about "UAV obstacle avoidance control based on light transmission model" is authorized by the China National Intellectual Property Administration.
+	</li>
+	<li>
 	 Jan. 2024 I am invited to be a reviewer for Automatika: Journal for Control, Measurement, Electronics, Computing and Communications.
 	</li>
 	<li>
@@ -175,14 +178,16 @@
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      卢伟, <strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法 "</a>,  CN Patent: CN 11348243 (First inventor is tutor).    </a>
+                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：CN 115202387 B (已授权) (First inventor is tutor). </a>
 	</li>
 	<li>
-                                      卢伟, <strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent：202010438526 .3 (已受理) (First inventor is tutor).    </a>
+                                      卢伟, <strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent：202010438526 .3 (已公开，实质审查) (First inventor is tutor).    </a>
 	</li>
 	<li>
-                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：202210628154. X (已受理) (First inventor is tutor). </a>
+                                      卢伟, <strong>李家诚</strong>, 陈浩, "一种基于时间戳的车辆遥操作时延控制方法"</a>,  CN Patent: CN 11348243 (已公开) (First inventor is tutor).    </a>
 	</li>
+
+
 </ol>
 
 <h2>Participate in Research Projects</h2>
