--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <h3>Patents</h3>
 <ol>
 	<li>
-                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>,  CN Patent：CN 115202387 B (已授权) (First inventor is tutor). </a>
+                                      方洋旺, <strong>李家诚</strong>, 张茂桃, 王志凯, 马文卉, "一种基于仿鸟类趋光性的固定翼无人机避障控制策略"</a>, CN 115202387 B (已授权) (First inventor is tutor). </a>
 	</li>
 	<li>
                                       卢伟, <strong>李家诚</strong>, "一种基于多驾驶模式切换的无人车辆控制方法"</a>,  CN Patent：202010438526 .3 (已公开，实质审查) (First inventor is tutor).    </a>
@@ -332,7 +332,7 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<center>© Jiacheng LI | Last updated: 03/2024</center>
+	<center>© Jiacheng LI | Last updated: 04/2024</center>
     <!--<center>© Jiacheng LI
     	<script type="text/javascript" language="javascript">
     	if (Date.parse(document.lastModified) != 0) document.write(" | Last updated: " + document.lastModified);</script>
