--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <p>
 	</p><div style="text-align:justify">I was born in Xining City, Qinghai Province, China, in 1997. I obtained my B.E. degrees in automation from <a href="http://ai.njau.edu.cn/#"> Dept. of Artificial Intelligence</a>,  <a href="http://english.njau.edu.cn/"> Nanjing Agricultural University</a> in 2020, under the supervision of <a href="http://ai.njau.edu.cn/info/1056/1159.htm">A/Prof. Wei Lu</a>.
  I obtained my M.S. degree in electronic information with the Dept. of <a href="https://wurenxitong.nwpu.edu.cn/#">Unmanned system Research</a>, <a href="http://en.nwpu.edu.cn/">Northwestern Polytechnical University</a> in 2023, under the supervision of <a href="https://teacher.nwpu.edu.cn/ywfang.html">Prof. Yangwang Fang</a> and <a href="https://teacher.nwpu.edu.cn/2019010291.html">A/Prof. Dengxiu Yu</a>. 
- From August 2024, I will be studying for a Ph.D. in Electromechanical Engineering at the <a href="https://www.um.edu.mo/">University of Macau</a>, <a href="https://www.fst.um.edu.mo/eme/">Department of Electromechanical Engineering</a>, under the supervision of <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Dr. Jason J. R. Liu.</a> </div>
+ From August 2024, I will be studying for a Ph.D. in Electromechanical Engineering at the <a href="https://www.fst.um.edu.mo/eme/">Department of Electromechanical Engineering</a>, <a href="https://www.um.edu.mo/">University of Macau</a>, under the supervision of <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Dr. Jason J. R. Liu.</a> </div>
 <p></p>
 <p>
 	 I am interested in networked system control theories and their applications in intelligent unmanned systems. I welcome colleagues and seniors to communicate and cooperate with me, exploring exciting research together.
