--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                          <strong>Jiacheng Li</strong>, Yangwang Fang, Haoyu Cheng, Zhikai Wang, and Shuaiqi Huangfu,  &quot; <a class="dhtgD aw5Odc" href="https://journals.sagepub.com/doi/full/10.1177/01423312221100340" target="_blank">Unmanned Aerial Vehicle Formation Obstacle Avoidance Control Based on Light Transmission Model and Improved Artificial Potential Field</a>,&quot; <i>Transactions of the Institute of Measurement and Control</i>, 2022, DOI: https://doi.org/10.1177/01423312221100340 (<strong>SCI, Q4</strong>)</a>
 	</li>
 	<li>
-                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song, &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022, DOI: 10.1109/JAS.2022.000000.(<strong>Top, SCI, Q1</strong>) (First author is tutor)</a>
+                         Wei Lu, <strong>Jiacheng Li</strong>, Huanhuan Qin, Lei Shu, and Aiguo Song, &quot;<a class="dhtgD aw5Odc" href="https://www.ieee-jas.net/en/article/id/5af95a12-f95b-4236-a17e-e87793f5dbf9" target="_blank">On Dual-Mode Driving Control Method for a Novel Unmanned Tractor With High Safety and Reliability</a>,&quot; <i>IEEE/CAA Journal of Automatica Sinica</i>, 2022, DOI: 10.1109/JAS.2023.123072.(<strong>Top, SCI, Q1</strong>) (First author is tutor)</a>
 	</li>
 	 <li>
                           Dengxiu Yu, <strong>Jiacheng Li</strong>, Zhen Wang and Xuelong Li, &quot;<a class="dhtgD aw5Odc" href="https://ieeexplore.ieee.org/abstract/document/10247627" target="_blank">An Overview of Swarm Coordinated Control </a>,&quot; <i>IEEE Transactions on Artificial Intelligence</i>, 2023, DOI: 10.1109/TAI.2023.3314581.(First author is tutor)</a> 
@@ -231,7 +231,7 @@
 <h2>Assistant Supervisory Experience</h2>
 <ul>
 	 <li>  
-   Final Year Projects： Jianzhang Sun, Cheng Fai Chao, UG students at the University of Macau, 2024. (<i>UAV Formation Obstacle Avoidance Control for Practical Mission Requirements</i>) 
+   Final Year Projects： Jianzhang Sun, Cheng Fai Chao, UG students at the University of Macau, 2024. (<i>Obstacle Avoidance Control for Multiple Unmanned Aerial Vehicles: A Position-based Artificial Potential Field Approach</i>) 
 	 </li>
 </ul>
 
