--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                    Journal Reviewer for  
 	       <ul>	
 	               <li> International Journal of Aerospace Engineering</li>
-		       <li> Transactions of the Institute of Measurement and Control
+		       <li> Transactions of the Institute of Measurement and Control</li>
 		       <li> Automatika: Journal for Control, Measurement, Electronics, Computing and Communications</li>
 		       <li> Franklin Open</li>
 	       </ul>	
