--- a/index.html
+++ b/index.html
@@ -116,22 +116,21 @@
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
-
 	<li>
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
-	</li>
-	 <li>
-                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; 2023.    </a>
-        </li>
-	<li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
+	<li>
+	                  Jason J. R. Liu, <strong>Jiacheng Li</strong>, Chenjun Liu, Peng Cheng, Ka-Wai Kwok, and James Lam, &quot; Distributed Frame-Based Containment Control for Positive Networked Fractional-Order Systems: A Linear Programming Approach</a>,&quot; 2023.   </a>
+	</li>
 </ol>
 <h3>Journal Papers</h3>
 <ol>
+	<li>
+                          <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu, and Yan-Jun Liu, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024. (Accepted/In press) (<strong>SCI, Q1</strong>) </a>
+       </li>
        <li>
                           <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao, and Dengxiu Yu, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, DOI: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>Top, SCI, Q1</strong>)  </a>
 	</li>
