--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 <h2>News</h2>
 <ul>
 	<li>
-	 Apr. 2024 Our patent about "UAV obstacle avoidance control based on light transmission model" is authorized by the China National Intellectual Property Administration.
+	 May. 2024 Our paper on swarm security control through cloud-fog computing is accepted by IEEE Transactions on Network Science and Engineering.
 	</li>
 	<li>
-	 Jan. 2024 I am invited to be a reviewer for Automatika: Journal for Control, Measurement, Electronics, Computing and Communications.
+	 Apr. 2024 Our patent about "UAV obstacle avoidance control based on light transmission model" is authorized by the China National Intellectual Property Administration.
 	</li>
 	<li>
 	 Oct. 2023 I am invited to be a reviewer for International Journal of Aerospace Engineering and Franklin Open.
