--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <h2>Experience</h2>
 <ul>
-	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to present. (Supervisor: <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Ass.Prof. Jason J. R. Liu.</a>)</li>
+	<li>  Research Assistant, Dept. of Electromechanical Engineering,  University of Macau, Aug. 2023 to Jul. 2024. (Supervisor: <a href="https://www.fst.um.edu.mo/personal/jasonliu/">Ass.Prof. Jason J. R. Liu.</a>)</li>
 </ul>
 	    
 
