--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
 <h2>News</h2>
 <ul>
 	<li>
+	 Jun. 2024 Our paper on time-varying UAV formation control is accepted by Journal of the Franklin Institute.
+	</li>
+	<li>
 	 May. 2024 Our paper on swarm security control through cloud-fog computing is accepted by IEEE Transactions on Network Science and Engineering.
 	</li>
 	<li>
@@ -117,9 +120,6 @@
 	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu, Chenjun Liu, and James Lam, &quot; Secure Collaborative Control in Heterogeneous Swarms under DoS Attacks: Exploring Cooperative-Competitive Interactions</a>,&quot; 2023.   </a>
 	</li>
 	<li>
-	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; 2023.   </a>
-	</li>
-	<li>
                           <strong>Jiacheng Li</strong>, Wenhui Ma, Yangwang Fang, Dengxiu Yu, and C. L. Philip Chen, &quot; Collision-Free Cooperation for UAV Swarm based on Parallel Control </a>,&quot; 2022.    </a>
 	</li>	
 	<li>
@@ -130,6 +130,9 @@
 <ol>
 	<li>
                           <strong>Jiacheng Li</strong>, Dengxiu Yu, Wenhui Ma, Jason J. R. Liu*, and Yan-Jun Liu*, &quot; Cooperative Control of Heterogeneous Nonlinear Swarm System under DoS Attack via Cloud-Fog Computing </a>,&quot; <i>IEEE Transactions on Network Science and Engineering</i>, 2024. (Accepted/In press) (<strong>SCI, Q1</strong>) </a>
+       </li>
+       <li>
+	                  <strong>Jiacheng Li</strong>, Jason J. R. Liu*,  and Peng Cheng, Chenjun Liu, Yuchen Zhang, and  Bo Chen, &quot; Event-based Time-Varying UAV Formation Obstacle Avoidance Control under Cyber-Attacks</a>,&quot; <i>Journal of the Franklin Institute</i>, 2024. (Accepted/In press) (<strong>SCI, Q1</strong>) </a>
        </li>
        <li>
                           <strong>Jiacheng Li</strong>,  Junmin Liu, Shuaiqi Huangfu, Guoyan Cao*, and Dengxiu Yu*, &quot; <a class="dhtgD aw5Odc" href="https://www.sciencedirect.com/science/article/pii/S0307904X22006114" target="_blank">Leader-follower Formation of Light-weight UAVs with Novel Active Disturbance Rejection Control</a>,&quot; <i>Applied Mathematical Modelling</i>, 2022, DOI: https://doi.org/10.1016/j.apm.2022.12.032. (<strong>Top, SCI, Q1</strong>)  </a>
